<resources>
    <string name="app__name">Assignment-2</string>
    <string name="log_in_to_your_account">Log in to your  account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="button">Button</string>
    <string name="login">log in</string>
    <string name="label_don_t_have_an_account_register">"Don't have an account? Register"</string>
</resources>
